force-app/main/default/objects/Prospecting_Velocity__c/Prospecting_Velocity__c.object-meta.xml
<CustomObject>
    <description>RO-1403</description>
    <label>Prospecting Velocity</label>
    <nameField>
        <label>Prospecting Velocity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospecting Velocities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>