force-app/main/default/objects/Prospecting_Velocity__c/fields/Calendar_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month_Year__c</fullName>
    <formula>IF( MONTH(Date__c) &lt; 10 ,
&quot;0&quot; + TEXT(MONTH( Date__c )) + &quot; / &quot; + TEXT(YEAR(Date__c)),
TEXT(MONTH( Date__c )) + &quot; / &quot; + TEXT(YEAR(Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Month &amp; Year</label>
    <type>Text</type>
</CustomField>