force-app/main/default/objects/Prospecting_Velocity__c/fields/Calendar_Week__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week__c</fullName>
    <formula>IF( 
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>