force-app/main/default/objects/Prospecting_Velocity__c/fields/Calendar_Week_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week_Year__c</fullName>
    <formula>IF(Calendar_Week__c &lt; 10 , &quot;0&quot; &amp; TEXT(Calendar_Week__c) &amp; &quot; / &quot; &amp; TEXT(YEAR( Date__c )),
   TEXT(Calendar_Week__c) &amp; &quot; / &quot; &amp; TEXT(YEAR( Date__c ))
)</formula>
    <label>Calendar Week &amp; Year</label>
    <type>Text</type>
</CustomField>