force-app/main/default/objects/Prospecting_Velocity__c/fields/Number_of_Demos_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Demos_Confirmed__c</fullName>
    <label>Number of Demos Confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>